# x.509-cert-verifier

./: .gitignore  CMakeLists.txt  LICENSE  README.md
certs/test_certs/bad_expired/: expired_chain.pem
certs/test_certs/bad_untrusted/: untrustedCA.pem  untrusted_chain.pem
certs/test_certs/good/: valid_chain.pem
certs/trust_store/: rootCA.pem
include/: CertVerifier.hpp  OpenSslWrappers.hpp
scripts/: generate_test_certs.py
src/: CertVerifier.cpp  main.cpp
tests/: TestVerifier.cpp
